<resources>
    <string name="app_name">AngleLift Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--shivani 14/11/18-->
    <string name="change_pass">Change Password</string>
    <string name="profile">Profile</string>
    <string name="lic_img">Licence Image</string>
    <string name="car_img">Car Image</string>
    <string name="update">Update</string>


    <!--shivani 13/11/1-->
    <string name="please_wait">Please Wait</string>
    <string name="address">Address</string>

    <!-- bundle passing-->
    <string name="b_nm">b_nm</string>
    <string name="b_mno">b_mno</string>
    <string name="b_add">b_add</string>
    <string name="b_email">b_email</string>
    <string name="b_dob">b_dob</string>
    <string name="b_pass">b_pass</string>
    <string name="b_profile">b_profile</string>
    <string name="b_lic_no">b_lic_no</string>
    <string name="b_lic_img">b_lic_img</string>
    <string name="b_issue_date">b_issue_date</string>
    <string name="b_exp_date">b_exp_date</string>


    // 17/10/18
    <string name="settings">Settings</string>
    <string name="my_trip">My Trip</string>
    <string name="schedule_trip">Schedule Trip</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="review">Review</string>
    <string name="total_trip">Total Trip</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="conform_new_pass">Conform New Password</string>
    <string name="submit">Submit</string>


    // 16/10/2018
    <string name="dob">Date of Birth</string>
    <string name="without_car">Without Car</string>
    <string name="with_car">With Car</string>


    //shivani 24/09/2018
    <string name="mobile">Mobile No.</string>
    <string name="password">Password</string>
    <string name="password_conf">Conform Password</string>
    <string name="change">Change</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email-ID</string>
    <string name="home">Home</string>

    //shivani 25/09/2018
    <string name="accessibility_go_back">Go Back</string>
    <string name="book_now">Book Now</string>
    <string name="order">Order Now</string>
    <string name="cars">Cars</string>
    <string name="payments">Payments</string>
    <string name="pickup">Pick Date &amp; Time</string>
    <string name="date">Pick Date</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>


    // shivain 26/09/2018

    <string name="otp">Enter OTP</string>
    <string name="done">Done</string>
    <string name="resend">Resend</string>
    <string name="nm">Name</string>
    <string name="lnm">Last Name</string>
    <string name="continu">Continue</string>
    <string name="lic_no">Licence No.</string>
    <string name="veh_no">Vehicle No.</string>
    <string name="veh_type">Vehicle Type</string>
    <string name="veh_doc">Vehicle Document</string>
    <string name="veh_details">Vehicle Details</string>
    <string name="issue_date">Issued Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="seater">No OF Seaters</string>
    <string name="register">Register</string>

    // shivani 27/9/2018
    <string name="pickup_place">Pickup Place</string>
    <string name="drop_place">Drop Place</string>
    <string name="rs">Rs.</string>
    <string name="time">Time</string>
    <string name="to">TO</string>

    // shiani 28/09/2018
    <string name="accept">Accept</string>
    <string name="reect">Reject</string>

    // shivani 29/9/2018

    <string name="cust_nm">Customer Name</string>
    <string name="cust_pick_add">Customer Pickup Adress</string>
    <string name="pick_time">Pickup Time</string>
    <string name="pick_km">Distance</string>
    <string name="trip_start">Swipe to Start Trip   </string>
    <string name="total_cost">Total Cost</string>
    <string name="total_dis">Total Distance</string>
    <string name="trip_cost">Trip Cost</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>

    // divya 24/9/2018
    <string name="map_api_key">AIzaSyCeDyzA-OuLcne1I0x2CtVrSolUFR83CGk</string>


    <string name="pick">Pickup Location</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="drop">Drop Location</string>
    <string name="fareest">Fare Estimate</string>
    <string name="icon_location">location</string>
    <string name="icon_drop">Drop</string>
    <string name="title_activity_maps">Map</string>
    <string name="km">5 Km.</string>

    //
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_gps">No GPS</string>
    <string name="dialog_no_location_service">Please turn on location service from settings, must press on/off toggle and agree to access location and restart an app.\nNote:if you have already done choices with disagree and dont show dialog again then location dialog not show when you press on/off toggle button.to solve this problem you must clear all setting preferences.</string>
    <string name="dialog_no_location_service_title">Locaton service is off.</string>
    <string name="dialog_no_gps_messgae">Seems like you have not started your location service.</string>
    <string name="dialog_enable_gps">Enable GPS</string>
    <string name="dialog_enable_location_service">Go to location service</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>

    <string name="map_api_key_place">AIzaSyA6H2L_euVj3TtbklfdDVVGAB_hVSFcH6M</string>
    <string name="text_source_pin_title">Pick me from here</string>
    <string name="text_destination_pin_title">Destination</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // shivani 3/11/18
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>


    <string name="text_go_offline">Go Offline</string>
    <string name="text_go_online">Go Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_offline_que">Do you want to go offline?</string>
    <string name="text_confirm">CONFIRM</string>
    <string name="text_exit_ok">OK</string>
    <string name="text_exit_cancel">CANCEL</string>

</resources>
