<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_trp_hist"
            android:icon="@drawable/car"
            android:title="@string/my_trip" />
        <item
            android:id="@+id/nav_sche_tip"
            android:icon="@drawable/date"
            android:title="@string/schedule_trip" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>



</menu>
