<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angel_bg"
    android:id="@+id/veh_frame"
    tools:context=".login.fragment.VehicalServiceFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/general_padding_20"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/veh_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_taxi" />

        <EditText
            android:id="@+id/edt_veh_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_20"
            android:background="@drawable/edt_back_des"
            android:fontFamily="sans-serif-light"
            android:hint="@string/veh_no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:padding="@dimen/general_padding_15"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edt_veh_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_10"
            android:background="@drawable/edt_back_des"
            android:fontFamily="sans-serif-light"
            android:hint="@string/veh_doc"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/general_padding_15"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edt_veh_detalis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_10"
            android:background="@drawable/edt_back_des"
            android:fontFamily="sans-serif-light"
            android:hint="@string/veh_details"
            android:inputType="text"
            android:maxLines="10"
            android:minLines="3"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/general_padding_15"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edt_veh_seater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_10"
            android:background="@drawable/edt_back_des"
            android:fontFamily="sans-serif-light"
            android:hint="@string/seater"
            android:inputType="number"
            android:padding="@dimen/general_padding_15"
            android:textSize="16.0sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_driver_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_height_50"
            android:background="@drawable/btn_yellow"
            android:padding="@dimen/general_padding_15"
            android:text="@string/register"
            android:textColor="@color/black" />

    </LinearLayout>
    </ScrollView>
</FrameLayout>