<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/general_padding_10"
    android:padding="@dimen/general_padding_5"
    tools:context=".Setting.ChangePasswordActivity">



        <EditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/general_padding_10"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="sans-serif-light"
            android:textColorHint="@color/black"
            android:maxLength="12"
            android:background="@drawable/box_border"
            android:padding="@dimen/general_padding_10"
            android:textColor="@color/black"
            android:textSize="16.0sp"
            android:textStyle="normal" />



        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/general_padding_10"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="sans-serif-light"
            android:textColorHint="@color/black"
            android:maxLength="12"
            android:background="@drawable/box_border"
            android:padding="@dimen/general_padding_10"
            android:textColor="@color/black"
            android:textSize="16.0sp"
            android:textStyle="normal" />


        <EditText
            android:id="@+id/confm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conform_new_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/general_padding_10"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="sans-serif-light"
            android:textColorHint="@color/black"
            android:maxLength="12"
            android:background="@drawable/box_border"
            android:padding="@dimen/general_padding_10"
            android:textColor="@color/black"
            android:textSize="16.0sp"
            android:textStyle="normal"/>


<Button
    android:id="@+id/change_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:layout_marginTop="@dimen/general_padding_10"
    android:textColor="@color/white"
    android:background="@color/colorPrimary"/>
</LinearLayout>