<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/general_padding_10"
    android:orientation="vertical"
    android:padding="@dimen/general_padding_10"
    tools:context=".my_trip.MyTripHistoryActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_invoice_total_rs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/pick"
                android:paddingLeft="@dimen/general_padding_20"
                android:paddingRight="@dimen/general_padding_20"
                android:text="@string/total_cost"
                android:textColor="@color/white"
                android:textSize="@dimen/font_26" />


            <TextView
                android:id="@+id/txt_invoice_total_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/pick"
                android:paddingLeft="@dimen/general_padding_20"
                android:paddingRight="@dimen/general_padding_20"
                android:text="@string/total_trip"
                android:textColor="@color/white"
                android:textSize="@dimen/font_26" />

    </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rec_my_trip_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding_15">

        </android.support.v7.widget.RecyclerView>

</LinearLayout>
    <LinearLayout
        android:id="@+id/contain_myhist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
</FrameLayout>
